--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "class-validator",
-  "private": true,
+  "name": "@mardari/class-validator",
+  "private": false,
   "version": "0.9.1",
   "description": "Class-based validation with Typescript / ES6 / ES5 using decorators or validation schemas. Supports both node.js and browser",
   "license": "MIT",
@@ -11,10 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pleerock/class-validator.git"
+    "url": "https://github.com/MardariG/class-validator.git"
   },
   "bugs": {
-    "url": "https://github.com/pleerock/class-validator/issues"
+    "url": "https://github.com/MardariG/class-validator/issues"
   },
   "tags": [
     "validator",
@@ -59,6 +59,7 @@
   },
   "scripts": {
     "build": "gulp package",
-    "test": "gulp tests"
+    "test": "gulp tests",
+    "publish": "gulp publish"
   }
 }
